--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= content_for(:title) || "Fullstack Challenge 1" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="description" content="Household energy production">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
