feat(layouts): enhance layout structure and styling

--- a/app/javascript/stylesheets/index.css
+++ b/app/javascript/stylesheets/index.css
@@ -1,6 +1,16 @@
 /* Always show scrollbar */
 html {
   overflow-y: scroll;
+  height: 100%;
+}
+body {
+  margin: auto;
+}
+body,
+#main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 .active {
   color: white;
