--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
   <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
 
   </head>
-  <body class="mode-dark max-w-screen-2xl m-auto">
-    <main id="main">
+  <body class="mode-dark max-w-screen-2xl">
+    <div id="main">
 
-    </main>
+    </div>
   <%= javascript_pack_tag "application" %>
   </body>
 
